--- a/bundles/jcr/jackrabbit-usermanager/pom.xml
+++ b/bundles/jcr/jackrabbit-usermanager/pom.xml
@@ -74,6 +74,10 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <Import-Package>
+                            org.apache.sling.api.resource;provide:=true,
+                            *
+                        </Import-Package>
                         <Export-Package>
                             org.apache.sling.jackrabbit.usermanager;version=2.2.1,
                         </Export-Package>
@@ -99,7 +103,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.1.0</version>
+            <version>2.3.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
