--- a/contrib/scripting/jst/pom.xml
+++ b/contrib/scripting/jst/pom.xml
@@ -133,6 +133,7 @@
         <dependency>
             <groupId>javax.jcr</groupId>
             <artifactId>jcr</artifactId>
+            <version>2.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
