--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.launchpad.base</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.5.0</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Launchpad Base</name>
@@ -42,9 +42,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/launchpad/base</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/launchpad/base</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/launchpad/base</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.launchpad.base-2.5.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.launchpad.base-2.5.0</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.launchpad.base-2.5.0</url>
     </scm>
 
     <build>
@@ -60,11 +60,8 @@
                         <configuration>
                             <skip>${maven.test.skip}</skip>
                             <target name="build">
-                                <taskdef resource="aQute/bnd/ant/taskdef.properties"
-                                    classpathref="maven.plugin.classpath" />
-                                <bnd classpath="${project.build.testOutputDirectory}" failok="false"
-                                    exceptions="true" files="src/test/resources/test1.bnd"
-                                    output="${project.build.testOutputDirectory}" />
+                                <taskdef resource="aQute/bnd/ant/taskdef.properties" classpathref="maven.plugin.classpath" />
+                                <bnd classpath="${project.build.testOutputDirectory}" failok="false" exceptions="true" files="src/test/resources/test1.bnd" output="${project.build.testOutputDirectory}" />
                             </target>
                         </configuration>
                         <goals>
