--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.scripting.console</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Script Console</name>
@@ -36,13 +36,13 @@
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/script-console
+            scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.console-1.0.0
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/script-console
+            scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.console-1.0.0
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/sling/trunk/contrib/scripting/script-console
+            http://svn.apache.org/viewvc/sling/tags/org.apache.sling.scripting.console-1.0.0
         </url>
     </scm>
 
