--- a/testing/samples/integration-tests/pom.xml
+++ b/testing/samples/integration-tests/pom.xml
@@ -272,6 +272,12 @@
             <version>1.0.5-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
         
         <!-- sling testing tools bundles requires httpclient -->
         <dependency>
