--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,8 @@
                             *
                         </Import-Package>
                         <Private-Package>
-                            org.apache.sling.resourceresolver.impl.*
+                            org.apache.sling.resourceresolver.impl.*,
+                            org.apache.sling.resourceresolver.accessgate.impl.*
                         </Private-Package>
                     </instructions>
                 </configuration>
@@ -124,7 +125,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.osgi</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
