--- a/installer/it/pom.xml
+++ b/installer/it/pom.xml
@@ -33,9 +33,9 @@
     <description>Integration tests of the Sling installer bundle</description>
 
     <properties>
+        <exam.version>3.0.3</exam.version>
+        <url.version>1.5.2</url.version>
         <pax.exam.log.level>INFO</pax.exam.log.level>
-        <!-- This can be set to activate remote debugging of the Pax Exam tests -->
-        <pax.exam.debug.port />
 
         <!-- BundleInstallStressTest parameters -->
         <BundleInstallStressTest.default.bundles.folder>${project.build.directory}/bundle-install-stress-test-bundles</BundleInstallStressTest.default.bundles.folder>
@@ -50,23 +50,6 @@
         <url>http://svn.apache.org/viewvc/sling/installer/it</url>
     </scm>
 
-    <repositories>
-        <repository>
-            <id>ops4j.releases</id>
-            <url>http://repository.ops4j.org/maven2</url>
-        </repository>
-        <repository>
-            <id>ops4j.profiles</id>
-            <url>http://scm.ops4j.org/repos/ops4j/projects/pax/runner-repository</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ops4j.releases</id>
-            <url>http://repository.ops4j.org/maven2</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <build>
         <plugins>
             <plugin>
@@ -77,10 +60,6 @@
                         <property>
                             <name>pax.exam.log.level</name>
                             <value>${pax.exam.log.level}</value>
-                        </property>
-                        <property>
-                            <name>pax.exam.debug.port</name>
-                            <value>${pax.exam.debug.port}</value>
                         </property>
                         <property>
                             <name>osgi.installer.pom.version</name>
@@ -150,7 +129,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-testbundle" />
                                         <attribute name="Bundle-Version" value="1.0" />
@@ -172,7 +151,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-testbundle" />
                                         <attribute name="Bundle-Version" value="1.1" />
@@ -194,10 +173,11 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-testbundle" />
                                         <attribute name="Bundle-Version" value="1.2" />
+                                        <attribute name="Export-Package" value="com.example.testbundle.somepackage" />
                                     </manifest>
                                 </jar>
                             </tasks>
@@ -216,7 +196,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-testA" />
                                         <attribute name="Bundle-Version" value="1.0" />
@@ -239,7 +219,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-testB" />
                                         <attribute name="Export-Package" value="org.apache.sling.installer.it.a;version=&quot;1.0&quot;" />
@@ -263,7 +243,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-needsB" />
                                         <attribute name="Bundle-Version" value="1.0" />
@@ -287,7 +267,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-snapshot-test" />
                                           <!-- 
@@ -315,7 +295,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-snapshot-test" />
                                           <!-- 
@@ -343,7 +323,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-snapshot-test" />
                                           <!-- 
@@ -370,7 +350,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                     </manifest>
                                 </jar>
                             </tasks>
@@ -389,11 +369,12 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test fragment bundle" />
                                         <attribute name="Fragment-Host" value="osgi-installer-testbundle" />
                                         <attribute name="Bundle-Version" value="1.0" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-testfragment" />
+                                        <attribute name="Export-Package" value="com.example.testfragment.fragmentpackage" />
                                     </manifest>
                                 </jar>
                             </tasks>
@@ -412,7 +393,7 @@
                                         <include name="META-INF/**" />
                                     </fileset>
                                     <manifest>
-                                        <attribute name="Manifest-Version" value="2" />
+                                        <attribute name="Bundle-ManifestVersion" value="2" />
                                         <attribute name="Bundle-Name" value="OSGi controller test bundle, invalid version number" />
                                         <attribute name="Bundle-SymbolicName" value="osgi-installer-invalid-version-test" />
                                           <!-- 
@@ -474,30 +455,38 @@
         </dependency>          
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
             <version>4.2.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam</artifactId>
-            <version>1.2.1</version>
+            <artifactId>pax-exam-container-native</artifactId>
+            <version>${exam.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-junit</artifactId>
-            <version>1.2.1</version>
+            <artifactId>pax-exam-junit4</artifactId>
+            <version>${exam.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
-            <artifactId>pax-exam-container-default</artifactId>
-            <version>1.2.1</version>
+            <artifactId>pax-exam-link-mvn</artifactId>
+            <version>${exam.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.ops4j.pax.url</groupId>
+            <artifactId>pax-url-aether</artifactId>
+            <version>${url.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <version>4.2.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
