--- a/installer/it/pom.xml
+++ b/installer/it/pom.xml
@@ -36,6 +36,8 @@
         <exam.version>3.0.3</exam.version>
         <url.version>1.5.2</url.version>
         <pax.exam.log.level>INFO</pax.exam.log.level>
+        <installer.api.version>1.0.1-SNAPSHOT</installer.api.version>
+        <installer.configuration.version>1.0.11-SNAPSHOT</installer.configuration.version>
 
         <!-- BundleInstallStressTest parameters -->
         <BundleInstallStressTest.default.bundles.folder>${project.build.directory}/bundle-install-stress-test-bundles</BundleInstallStressTest.default.bundles.folder>
@@ -67,11 +69,11 @@
                         </property>
                         <property>
                             <name>installer.api.version</name>
-                            <value>1.0.1-SNAPSHOT</value>
+                            <value>${installer.api.version}</value>
                         </property>
                         <property>
                             <name>installer.configuration.version</name>
-                            <value>1.0.11-SNAPSHOT</value>
+                            <value>${installer.configuration.version}</value>
                         </property>
                         <property>
                             <name>osgi.installer.base.dir</name>
@@ -433,12 +435,24 @@
             </plugin>
           </plugins>
     </build>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.installer.api</artifactId>
-            <version>1.0.0</version>
+            <version>${installer.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.installer.factory.configuration</artifactId>
+            <version>${installer.configuration.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.installer.api</artifactId>
+            <version>${installer.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
