--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -88,6 +88,7 @@
           <module>commons/html</module>
           <module>extensions/apt/parser</module>
           <module>extensions/apt/servlet</module>
+          <module>extensions/discovery/api</module>
           <module>extensions/dojo</module>
           <module>extensions/dojo-sling</module>
           <module>extensions/gwt/sample</module>
