--- a/contrib/extensions/muppet/muppet-sling/pom.xml
+++ b/contrib/extensions/muppet/muppet-sling/pom.xml
@@ -79,6 +79,7 @@
         <dependency>
             <groupId>javax.jcr</groupId>
             <artifactId>jcr</artifactId>
+            <version>2.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -122,6 +123,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.testing</artifactId>
+            <version>2.0.14</version>
             <scope>test</scope>
         </dependency>
      </dependencies>
